--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
    "scripts": {
      "pretest": "npx ts-node src/helpers/reports/init.ts",
      "test": "cross-env ENV=int08 FORCE_COLOR=0 cucumber-js --config=config/cucumber.js || true",
-     "test:login": "cross-env ENV=prod cucumber-js login",
+     "test:login": "cross-env ENV=int08 cucumber-js login",
      "test:addToCart": "cucumber-js addToCart",
      "test:failed": "cross-env ENV=prod cucumber-js p- rerun @rerun.txt",
      "posttest": "npx ts-node src/helpers/reports/report.ts"
