--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
       - name: Run Playwright Tests
-        run: npm test
+        run: npm run test --tags="not @auth"
       - name: Upload Playwright Report
         uses: actions/upload-artifact@v4
         if: always()
